--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               title: "SEED: Accelerating Reasoning Tree Construction via Scheduled Speculative Decoding",
               paper_url: "https://arxiv.org/abs/2406.18200",
               authors: "<b>Zhenglin Wang</b>, Jialong Wu, Yilong Lai, Congzhi Zhang, DeyuZhou",
-              conference: "Preprint",
+              conference: "NeurIPS 2024 Compression Workshop & COLING 2025",
               image: "figures/seed.png",
               others: null
             });
