--- a/index.html
+++ b/index.html
@@ -161,6 +161,24 @@
           </script>
         </table>
         
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <tr>
+            <td width="25%" id="scope-img"></td>
+            <td valign="top" width="75%" id="scope-txt"></td>
+          </tr>
+          <script type="text/javascript">
+            createProjectElement(
+              id = "scope", {
+              title: "SCOPE: Optimizing Key-Value Cache Compression in Long-context Generation",
+              paper_url: "https://arxiv.org/abs/2412.13649",
+              authors: "Jialong Wu, <b>Zhenglin Wang</b>, Linhai Zhang, Yilong Lai, Yulan He, DeyuZhou",
+              conference: "Preprint",
+              image: "figures/scope.png",
+              others: null
+            });
+          </script>
+        </table>
+        
         <!-- Other Researches -->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tr>
