--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
           </tr>
         </table>
 
-        <!-- (Co-)First-Author Publications -->
+        <!-- Co-First Author, First Author, and Key Publications -->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tr>
             <td width="100%" valign="middle">
-              <heading>(Co-)First-Author Publications</heading>
+              <heading>First Author, Co-First Author and Key Contributor Publications</heading>
               <p>
                 
           </tr>
@@ -174,6 +174,24 @@
               authors: "Jialong Wu, <b>Zhenglin Wang</b>, Linhai Zhang, Yilong Lai, Yulan He, DeyuZhou",
               conference: "Preprint",
               image: "figures/scope.png",
+              others: null
+            });
+          </script>
+        </table>
+
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <tr>
+            <td width="25%" id="webwalker-img"></td>
+            <td valign="top" width="75%" id="webwalker-txt"></td>
+          </tr>
+          <script type="text/javascript">
+            createProjectElement(
+              id = "webwalker", {
+              title: "WebWalker: Benchmarking LLMs in Web Traversal",
+              paper_url: "https://arxiv.org/abs/2501.07572",
+              authors: "Jialong Wu, Wenbiao Yin, Jiang Yong, <b>Zhenglin Wang</b>, Zekun Xi, Runnan Fang, Linhai Zhang, Yulan He, Deyu Zhou, Pengjun Xie, Fei Huang",
+              conference: "Preprint",
+              image: "figures/webwalker.jpg",
               others: null
             });
           </script>
