--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             <td width="60%" valign="middle">
               <heading>News</heading>
               <ul>
+                <li> <b>2024-11</b> One paper were accepted to COLING 2025. See you in Abu Dhabi, UAE🇦🇪!</li>
                 <li> <b>2024-11</b> Joined <a href="https://github.com/Zefan-Cai/KVCache-Factory">KVCache-Factory</a> as a contributor! </li>
               </ul>
             </td>
