--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               title: "SCOPE: Optimizing Key-Value Cache Compression in Long-context Generation",
               paper_url: "https://arxiv.org/abs/2412.13649",
               authors: "Jialong Wu, <b>Zhenglin Wang</b>, Linhai Zhang, Yilong Lai, Yulan He, DeyuZhou",
-              conference: "Preprint",
+              conference: "ACL 2025 main",
               image: "figures/scope.png",
               others: null
             });
@@ -191,7 +191,7 @@
               title: "WebWalker: Benchmarking LLMs in Web Traversal",
               paper_url: "https://arxiv.org/abs/2501.07572",
               authors: "Jialong Wu, Wenbiao Yin, Jiang Yong, <b>Zhenglin Wang</b>, Zekun Xi, Runnan Fang, Linhai Zhang, Yulan He, Deyu Zhou, Pengjun Xie, Fei Huang",
-              conference: "Preprint",
+              conference: "ACL 2025 main",
               image: "figures/webwalker.jpg",
               others: null
             });
